Sign up Module v1 finished

--- a/src/index.less
+++ b/src/index.less
@@ -1,7 +1,15 @@
 @import '~rsuite/styles/index.less';
+@import '~rsuite/dist/rsuite.min.css';
+
+@enable-dark-mode: true;
 
 #sign-up-app {
+    font-family: 'DM Sans';
     max-width: 1000px;
     margin-right: auto;
     margin-left: auto;
+
+    #sign-up-container {
+        background-color: #FDF7F7;
+    }
 }
